--- a/client/src/components/ScrollButton/ScrollButton.css
+++ b/client/src/components/ScrollButton/ScrollButton.css
@@ -1,11 +1,7 @@
-.scroll.left, .scroll.right{
+.left, .right{
   background-color: #1a191b;
   color: #e4e4e4;
   border: none;
   justify-items: center;
   width: 100%;
-  font-size: 3em;
-  cursor: pointer;
-  padding: 1em 0.5em;
-  /* height: 1em; */
 }
