Revert "Solving merge conflicts"
This reverts commit 182ce394f094f52270b33cb7b9efa8c74fb14a53.

--- a/client/src/components/Login/LoginInterface.css
+++ b/client/src/components/Login/LoginInterface.css
@@ -78,9 +78,14 @@ a:hover {
 
 }
 
-.defaultbtn:hover {
+.deafultbtn:hover {
     background-color: #84bd00; 
     color: black;
+}
+
+.deafultbtn:disabled{
+    cursor: not-allowed;
+
 }
 
 .btn-div{
