--- a/client/src/components/PlanName/PlanName.css
+++ b/client/src/components/PlanName/PlanName.css
@@ -1,23 +1,33 @@
 #plan-name-heading {
-  display: block;
+  display: inline-block;
+  margin: 0;
   border: 1px solid #1a191b;
   background-color: #1a191b;
+  padding: 0.135em 0.1em;
   font-size: 1.5em;
   font-weight: normal;
-  min-width: 5em;
-  min-height: 1em;
-  color: #e4e4e4;
+  margin: 0;
+}
+
+input#plan-name-heading {
+  margin: 0;
+  display: block;
   -webkit-appearance: none;
+  text-align: start;
+  color: #e4e4e4;
+  border: 1px solid grey;
+  border-radius: 0.25em;
+  background-color: black;
+  box-sizing: border-box;
+  height: 1.5em;
+  font-weight: normal;
+  font-size: 1.5em;
+  font-family: Helvetica;
 }
 
-#plan-name-heading:focus {
-  background-color: black;
-  border-radius: 0.25em;
+h3#plan-name-heading:hover {
   border: 1px solid grey;
-}
-
-#plan-name-heading:hover {
-  background-color: black;
   border-radius: 0.25em;
-  border: 1px solid grey;
+  background-color: black;
+  box-sizing: border-box;
 }
