--- a/client/src/components/Planner/PlannerArea.css
+++ b/client/src/components/Planner/PlannerArea.css
@@ -33,14 +33,22 @@
   right: 2em;
 }
 
-.floating-icon.add-term {
-  top: 1em;
+.scroll-btn.hide {
+  display: none;
+}
+
+.scroll-btn {
+  position: absolute;
+  z-index: 1;
+  max-width: 5em;
+  height: 1.5em;
+  top: 50%;
+}
+
+.scroll-btn.right{
   right: 2em;
 }
 
-.add-term p {
-  position: absolute;
-  right: -2rem;
-  font-size: 1rem;
-  width: 5em;
+.scroll-btn.left{
+  left: 2em;
 }
